	  (and lots of testing) before it can be used with the LPC43xx.
	* nuttx/Documentation/NuttShell.html:  Added a section covering ways to
	  customize the behavior or NSH.
	* arch/arm/src/stm32/chip/stm32f1*_pinmap.h: STM32 CAN TX/RX pins reversed;
	  inconsistent conditional compilation.  Reported by Max Holtzberg.
	* arch/arm/*/stm32:  Add support for STM32 F107 "Connectivity Line" 
	  Ethernet (contributed by Max Holtzberg).
	* configs/olimex-stm32-p107:  Add board support for the Olimiex STM32-P107
	   board (contributed by Max Holtzberg).
	* arch/arm/src/stm32/stm32f2xx_dma.c, stm32f4xx_dma.c, stm32_serial.c, and
	  stm32_spic.c:  DMA priority was getting zeroed by STM32 F2/F4 DMA drivers
	  so that all DMAs ran at the lowest priority.
	* configs/stm3240g-eval/include/board.h and configs/stm3220:  Drop SD card
	  frequency from 24 to 16 MHz.  Apparently 24 MHz is too fast for the board.
	  This (plus the change to the STM32 DMA (above) fixes SDIO DMA on the
	  STM3240G-EVAL (and probably STM3220G-EVAL -- untested).
	* arch/arm/src/stm32/stm32f2xx_dma.c and stm32f4xx_dma.c: Backed out the
	  DMA priority change just above.  The reduced SD card frequency was
	  necessary and sufficient to resolve the problem.
	* drivers/serial/serial.c:  open, read, write, and poll methods may now
	  abort return EINTR (or a short transfer size) if a signal is received
	  while waiting to receive or send serial data.  This behavior is required
	  by POSIX.
	* include/sys/types.h:  Define NULL to be (0) if __cplusplus is defined.
	  (contributed by Mike Smith)
	* include/ctype.h: Remove a stray semi-colon in a definitions (Thanks
	  Mike Smith).
	* configs/.../Make.defs.  Fix C++ include path set-up in Make.defs file
	  for all 8-bit AVR platforms (Thanks Richard Cochran).
	* lib/stdio/lib_*stream.c:  Revised to handle new error return values from
	  serial.c.
	* arch/arm/src/stm32/stm32_spi.c:  SPI driver can now survice re-
	  initialization (Mike Smith).